@@ -11,8 +11,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -25,7 +25,7 @@ public class IngredientService {
     @Transactional
     public IngredientDTO createIngredient(IngredientDTO ingredientDTO) {
         Recipe recipe = recipeRepository.findById(ingredientDTO.getRecipeId())
-                .orElseThrow(() -> new RuntimeException("Recipe not found with id: " + ingredientDTO.getRecipeId()));
+                .orElseThrow(() -> new NoSuchElementException("Recipe not found with id: " + ingredientDTO.getRecipeId()));
 
         Ingredient ingredient = ingredientMapper.toEntity(ingredientDTO, recipe);
         Ingredient savedIngredient = ingredientRepository.save(ingredient);
@@ -36,7 +36,7 @@ public class IngredientService {
     public List<IngredientDTO> getAllIngredients() {
         return ingredientRepository.findAll().stream()
                 .map(ingredientMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<IngredientDTO> getIngredientById(Long id) {
@@ -47,19 +47,19 @@ public class IngredientService {
     public List<IngredientDTO> getIngredientsByRecipe(Long recipeId) {
         return ingredientRepository.findByRecipeId(recipeId).stream()
                 .map(ingredientMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<IngredientDTO> searchIngredientsByName(String name) {
         return ingredientRepository.findByNameContainingIgnoreCase(name).stream()
                 .map(ingredientMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public IngredientDTO updateIngredient(Long id, IngredientDTO ingredientDTO) {
         Ingredient ingredient = ingredientRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Ingredient not found with id: " + id));
+                .orElseThrow(() -> new NoSuchElementException("Ingredient not found with id: " + id));
 
         ingredient.setName(ingredientDTO.getName());
         ingredient.setQuantity(ingredientDTO.getQuantity());
@@ -67,7 +67,7 @@ public class IngredientService {
 
         if (ingredientDTO.getRecipeId() != null && !ingredientDTO.getRecipeId().equals(ingredient.getRecipe().getId())) {
             Recipe newRecipe = recipeRepository.findById(ingredientDTO.getRecipeId())
-                    .orElseThrow(() -> new RuntimeException("Recipe not found with id: " + ingredientDTO.getRecipeId()));
+                    .orElseThrow(() -> new NoSuchElementException("Recipe not found with id: " + ingredientDTO.getRecipeId()));
             ingredient.setRecipe(newRecipe);
         }
 
@@ -78,7 +78,7 @@ public class IngredientService {
     @Transactional
     public void deleteIngredient(Long id) {
         if (!ingredientRepository.existsById(id)) {
-            throw new RuntimeException("Ingredient not found with id: " + id);
+            throw new NoSuchElementException("Ingredient not found with id: " + id);
         }
         ingredientRepository.deleteById(id);
     }
